--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,6 @@ uvicorn[standard]==0.30.6
 python-dotenv==1.0.1
 motor==3.5.1
 httpx==0.27.0
-openai==1.54.3
+pymongo==4.8.0
 pydantic==2.9.2
 pyjwt==2.9.0
