--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ CORS_ORIGINS="*"
 
 # Frontend & API URLs
 FRONTEND_URL=http://localhost:3000
-API_URL=http://localhost:8000
+API_URL=https://opentriage.onrender.com
 
 # GitHub OAuth
 GITHUB_CLIENT_ID="Ov23lir2mhiqObn3BltH"
