--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ DB_NAME="opentriage_db"
 CORS_ORIGINS="*"
 
 # Frontend & API URLs
-FRONTEND_URL=hhttps://open-triage-lgdc49epc-cosmicmagnetars-projects.vercel.app
+FRONTEND_URL=https://open-triage-lgdc49epc-cosmicmagnetars-projects.vercel.app/
 API_URL=https://opentriage.onrender.com
 
 # GitHub OAuth
