--- a/backend/.env
+++ b/backend/.env
@@ -5,15 +5,15 @@ DB_NAME="opentriage_db"
 CORS_ORIGINS="*"
 
 # Frontend & API URLs
-FRONTEND_URL=https://open-triage-lgdc49epc-cosmicmagnetars-projects.vercel.app
-API_URL=https://opentriage.onrender.com
+FRONTEND_URL=http://localhost:3000
+API_URL=http://localhost:8000
 
 # GitHub OAuth
 GITHUB_CLIENT_ID="Ov23lir2mhiqObn3BltH"
 GITHUB_CLIENT_SECRET="c9e66a5589aab7b495956bf8d659be846c311fcb"
 
 # JWT Secret
-JWT_SECRET="opentriage_jwt_secret_key_change_in_production"
+JWT_SECRET="fbfd4546y6_y76hdvf_or_htfe5y5gr"
 
 # AI - Meta Llama 3.3 70B Instruct (Free)
 # Using OpenRouter API for AI Chat Agent and Issue Triage
