--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,8 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-dotenv==1.0.1
-motor==3.5.1
-httpx==0.27.0
-pymongo==4.8.0
-openai==1.54.3
-pydantic==2.9.2
-pyjwt==2.9.0
+fastapi
+uvicorn
+motor
+pydantic
+python-dotenv
+PyJWT
+httpx
+openai
