--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
+        "@tailwindcss/typography": "^0.5.19",
         "axios": "^1.6.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -42,6 +43,7 @@
         "react-day-picker": "^8.10.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.0",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^6.22.3",
         "recharts": "^2.12.2",
         "sonner": "^1.4.3",
