--- a/backend-ts/package.json
+++ b/backend-ts/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
+    "@octokit/rest": "^22.0.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "jsonwebtoken": "^9.0.3",
