--- a/backend-ts/package.json
+++ b/backend-ts/package.json
@@ -14,6 +14,7 @@
     "migrate:data": "tsx scripts/migrate-data.ts"
   },
   "dependencies": {
+    "ably": "^2.6.0",
     "@libsql/client": "^0.17.0",
     "@octokit/rest": "^22.0.1",
     "dotenv": "^17.2.3",
