--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -57,7 +57,10 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:coverage": "vitest --coverage"
     },
     "eslintConfig": {
         "extends": [
@@ -78,12 +81,16 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.18",
+        "jsdom": "^24.0.0",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
-        "vite": "^5.2.0"
+        "vite": "^5.2.0",
+        "vitest": "^1.3.1"
     }
 }
