--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "ably": "^2.6.0",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -33,6 +32,7 @@
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@tailwindcss/typography": "^0.5.19",
+        "ably": "^2.6.0",
         "axios": "^1.6.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -50,6 +50,7 @@
         "sonner": "^1.4.3",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
+        "uuid": "^13.0.0",
         "web-vitals": "^2.1.4",
         "zod": "^3.22.4",
         "zustand": "^4.5.2"
