--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -38,6 +38,7 @@
         "clsx": "^2.1.0",
         "date-fns": "^3.3.1",
         "framer-motion": "^11.0.8",
+        "html2canvas": "^1.4.1",
         "lucide-react": "^0.344.0",
         "next-themes": "^0.2.1",
         "react": "^18.2.0",
