--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -48,6 +48,7 @@
         "react-markdown": "^10.1.0",
         "react-router-dom": "^6.22.3",
         "recharts": "^2.12.2",
+        "socket.io-client": "^4.8.3",
         "sonner": "^1.4.3",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
