--- a/ai-engine/requirements.txt
+++ b/ai-engine/requirements.txt
@@ -47,12 +47,10 @@ PyJWT>=2.8.0
 # Redis Cache
 redis>=5.0.0
 
-# Turso (libsql) Database - try both package names
-libsql-client>=0.5.0
+# Turso (libsql) Database
+libsql-client>=0.3.0
 
 # Sentiment Analysis - Local Hugging Face models (DistilBERT)
 transformers>=4.40.0
 torch>=2.1.0  # CPU version is fine, auto-installs CPU build if GPU not detected
 sentencepiece>=0.1.99
-libsql-experimental>=0.0.55
-libsql_client
